--- a/community/sbw/SBW/SBW_2025.html
+++ b/community/sbw/SBW/SBW_2025.html
@@ -65,11 +65,11 @@ sitemap: community/sbw
       <tr><td>Wade Webster, North Dakota State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Wade_Webster.pdf" target="_blank">Soybean seedling disease managemrny in a changing climate</a></td></tr>
       <tr><td>Zenglu Li, Univ. of Georgia</td><td>Progress in breeding for frogeye leafspot resistance</td></tr>
       <tr><td>Dechun Wang, Michigan State Univ.</td><td>Genetics and breeding for white mold resistance</td></tr>
-      <tr><td>Mandy Bish, University of Missouri</td><td>Insights from the field: An extension perspective on soybean diseases in the Central U.S.</td></tr>
+      <tr><td>Mandy Bish, Univ. of Missouri</td><td>Insights from the field: An extension perspective on soybean diseases in the Central U.S.</td></tr>
       <tr><td colspan='2'>Coffee Break</td></tr>
       <tr><th colspan='2'>SESSION 5: New and Emerging Disease Issues</th></tr>
       <tr><td>Panel Discussion</td><td>New and emerging diseases: What should breeders be worried about?</td></tr>
-      <tr><td colspan='2'>Poster Session & Social Hour<br><a href="/community/sbw/SBW/posters2025.html" target="_blank">2025 Poster Winners</a></td></tr>
+      <tr><td>Poster Session & Social Hour</td><td><a href="/community/sbw/SBW/posters2025.html" target="_blank">2025 Poster Winners</a></td></tr>
     </body>
   </table>
 </div>
@@ -116,7 +116,7 @@ sitemap: community/sbw
     <body>
       <tr><td>Data visualization workshop</td><td>Public Liaison Officer</td></tr>
       <tr><td>Soybean Germplasm Committee Meeting</td><td>Ben Fallen, USDA-ARS</td></tr>
-      <tr><td>SoyBase Workshop Meeting</td><td><a href="https://www.soybase.org/about/#contact" target="_blank">Contact Soybase team</a></td></tr>
+      <tr><td>SoyBase Workshop Meeting</td><td><a href="https://www.soybase.org/about/#contact" target="_blank">SoyBase team</a></td></tr>
       <tr><td>Soybean Genomics Executive Committee Meeting</td><td>Jamie O'Rourkke, USDA-ARS</td></tr>
       <tr><td>Technicians Workshop</td><td>Brian Little and Benjamin Bartlett</td></tr>
       <tr><td>Soybean Genetics Committee</td><td>Elroy Cober, AAFC</td></tr>
@@ -136,7 +136,7 @@ sitemap: community/sbw
     <body>
       <tr><td>Technicians Workshop</td><td>Brian Little and Benjamin Bartlett</td></tr>
       <tr><td>North Uniform Regional Testing & SCN Regional Testing</td><td>Adam Rock & Troy Cary</td></tr>
-      <tr><td>South Uniform Regional Testing</td><td>Anne Gillen</td></tr>
+      <tr><td>South Uniform Regional Testing</td><td>Anne Gillen, USDA-ARS</td></tr>
       <tr><td></td></tr>
     </body>
   </table>
