--- a/community/sbw/SBW/SBW_2025.html
+++ b/community/sbw/SBW/SBW_2025.html
@@ -117,7 +117,7 @@ sitemap: community/sbw
       <tr><td>Data visualization workshop</td><td>Public Liaison Officer</td></tr>
       <tr><td>Soybean Germplasm Committee Meeting</td><td>Ben Fallen, USDA-ARS</td></tr>
       <tr><td>SoyBase Workshop Meeting</td><td><a href="https://www.soybase.org/about/#contact" target="_blank">SoyBase team</a></td></tr>
-      <tr><td>Soybean Genomics Executive Committee Meeting</td><td>Jamie O'Rourkke, USDA-ARS</td></tr>
+      <tr><td>Soybean Genomics Executive Committee Meeting</td><td>Jamie O'Rourke, USDA-ARS</td></tr>
       <tr><td>Technicians Workshop</td><td>Brian Little and Benjamin Bartlett</td></tr>
       <tr><td>Soybean Genetics Committee</td><td>Elroy Cober, AAFC</td></tr>
     </body>
@@ -135,8 +135,8 @@ sitemap: community/sbw
     </thead>
     <body>
       <tr><td>Technicians Workshop</td><td>Brian Little and Benjamin Bartlett</td></tr>
-      <tr><td>North Uniform Regional Testing & SCN Regional Testing</td><td>Adam Rock & Troy Cary</td></tr>
-      <tr><td>South Uniform Regional Testing</td><td>Anne Gillen, USDA-ARS</td></tr>
+      <tr><td>Northern Uniform Regional Testing & SCN Regional Testing</td><td>Adam Brock & Troy Cary</td></tr>
+      <tr><td>Southern Uniform Regional Testing</td><td>Anne Gillen, USDA-ARS</td></tr>
       <tr><td></td></tr>
     </body>
   </table>
