--- a/community/sbw/SBW/SBW_2025.html
+++ b/community/sbw/SBW/SBW_2025.html
@@ -1,7 +1,158 @@
 ---
-
 layout: default
-title: 
+title: 2025 Soybean Breeders Workshop - Agenda and Presentations 
 sitemap: community/sbw
 ---
 
+<h2>2025 Soybean Breeders' Workshop - Pathology and Breeding Innovation</h2>
+<hr >
+<div>
+  <a class="uk-text-bold" href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Agenda_2025_02_18.pdf" target="_blank">View the published 2024 SBW Agenda</a>
+</div>
+
+<h3>Monday February 17th, 2025</h3>
+<div class="uk-overflow-auto">
+  <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+    <thead>
+        <tr>
+            <th class="uk-table-expand">Speaker</th>
+            <th class="uk-table-expand">Topic</th>
+        </tr>
+    </thead>
+    <body>
+      <tr><td>Aaron Lorenz, Univ. of Minnesota<br>Keith Rincker, BASF</td><td>Welcome and opening remarks</td></tr>
+      <tr><th colspan='2'>SESSION 1: Resources and Breeding Innovations | Chair: Aaron Lorenz, Univ. of Minnesota</th></tr>
+      <tr><td>Rex Nelson, SoyBase, USDA-ARS</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Rex_Nelson.pdf" target="_blank">New look, New Functionality</a></td></tr>
+      <tr><td>Jianxin Ma, Purdue Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Jianxin_Ma.pdf" target="_blank">SoyRenSeq: An approach for disease resistance gene discovery and application</a></td></tr>
+      <tr><td>Geeta Menon, BASF</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Geeta_Menon.pdf" target="_blank">BASF soybean seeds and traits</a></td></tr>
+      <tr><td>Cory Hirsch, Univ. of Minnesota</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Cory_Hirsch.pdf" target="_blank">Leveraging large-scale data and machine learning to understand plant responses to abiotic and biotic stress</a></td></tr>
+      <tr><td>Mark Miller, United Soybean Board</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Mark_Miller.pdf" target="_blank">Current state and focus of USB research funding</a></td></tr>
+      <tr><td colspan='2'>Coffee Break</td></tr>
+      <tr><th colspan='2'>Keynote Presentations | Chair: Keith Rincker, BASF</th></tr>
+      <tr><td><i>Keynote speech:</i> Federico Martin, Colorado State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Federico_Martin.pdf" target="_blank">Exploiting intergenic spaces to build stress resistance in plants</a></td></tr>
+      <tr><td><i>Keynote speech:</i> Carl Bradley, Univ. of Kentucky</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Carl_Bradley.pdf" target="_blank">Current and future soybean diseases chanllenges in the U.S.</a></td></tr>
+      <tr><td colspan='2'>Housekeeping announcements</td></tr>
+      <tr><td colspan='2'>Graduate Student and Postdoc Professional Development Event</td></tr>
+    </body>
+  </table>
+</div>
+
+<h3>Tuesday February 18th, 2025</h3>
+<div class="uk-overflow-auto">
+<table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+    <thead>
+        <tr>
+            <th class="uk-table-expand">Speaker</th>
+            <th class="uk-table-expand">Topic</th>
+        </tr>
+    </thead>
+    <body>
+      <tr><th colspan='2'>SESSION 2: Nematodes | Chairs: Carrie Miranda, North Dakota State Univ. & Andrew Scaboo, Univ. of Missouri</th></tr>
+      <tr><td>Andrew Scaboo, Univ. of Missouri</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Andrew_Scaboo.pdf" target="_blank">New insights for developing soybean cultivars with broad SCN resistance</a></td></tr>
+      <tr><td>Horacio Lopez-Nicora, Ohio State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Horacio_Lopez-Nicora.pdf" target="_blank">Soybean Cyst Nematode: Current challenges and future innovations</a></td></tr>
+      <tr><td>Melissa Mitchum, Univ. of Georgia</td><td>Towards a better Understanding of soybean resistance to Southern Root-Knot Nematode</td></tr>
+      <tr><td>Caio Canella Vieira, Univ. of Arkansas</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Caio_Canella.pdf" target="_blank">Broading soybean resistance to Southern Root-Knot Nematode</a></td></tr>
+      <tr><td colspan='2'>Coffee Break</td></tr>
+      <tr><th colspan='2'>SESSION 3: Stem and Root Diseases | Chairs: Megan McCaghey, Univ. of Minnesota & Eliana Monteverde, Univ. of Illionis</th></tr>
+      <tr><td>Alison Robertson, Iowa State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Alison_Robertson.pdf" target="_blank">Loss of Rps gene efficacy for mitigating <i>Phytophthora</i> stem and root rot in coventional soybean varieties</a></td></tr>
+      <tr><td>Keith Merrill, Bayer Crop Science</td><td>Engineering disease tolerance through the use of genome editing</td></tr>
+      <tr><td>Febina Mathew, North Dakota State Univ.</td><td>Fusarium and Diaporthe: Latest insights</td></tr>
+      <tr><td>Andrew Bent, Univ. of Wisconsin-Madison</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Andrew_Bent.pdf" target="_blank">Soybean Cyst Nematode resistance mechanisms</a></td></tr>
+      <tr><td>Steve Clough, USDA-ARS</td><td>Red Crown Rot - An emerging threat</td></tr> 
+      <tr><td colspan='2'>Lunch</td></tr>
+      <tr><th colspan='2'>SESSION 4: Foliar and Seeding Diseases | Chairs: Feng Lin, Univ. of Missouri & Horacio Lopez-Nicora, Ohio State Univ.</th></tr>
+      <tr><td>Daren Mueller, Iowa State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Daren_Mueller.pdf" target="_blank">Foliar disease identification: How good are you?</a></td></tr>
+      <tr><td>Wade Webster, North Dakota State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Wade_Webster.pdf" target="_blank">Soybean seedling disease managemrny in a changing climate</a></td></tr>
+      <tr><td>Zenglu Li, Univ. of Georgia</td><td>Progress in breeding for frogeye leafspot resistance</td></tr>
+      <tr><td>Dechun Wang, Michigan State Univ.</td><td>Genetics and breeding for white mold resistance</td></tr>
+      <tr><td>Mandy Bish, Univ. of Missouri</td><td>Insights from the field: An extension perspective on soybean diseases in the Central U.S.</td></tr>
+      <tr><td colspan='2'>Coffee Break</td></tr>
+      <tr><th colspan='2'>SESSION 5: New and Emerging Disease Issues</th></tr>
+      <tr><td>Panel Discussion</td><td>New and emerging diseases: What should breeders be worried about?</td></tr>
+      <tr><td>Poster Session & Social Hour</td><td><a href="/community/sbw/SBW/posters2025.html" target="_blank">2025 Poster Winners</a></td></tr>
+    </body>
+  </table>
+</div>
+
+<h3>Wednesday February 19th, 2025</h3>  
+<div class="uk-overflow-auto">
+  <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+    <thead>
+        <tr>
+            <th class="uk-table-expand">Speaker</th>
+            <th class="uk-table-expand">Topic</th>
+        </tr>
+    </thead>
+    <body>
+      <tr><th colspan='2'>SESSION 6: Reports and Announcements</th></tr>
+      <tr><td>Brent Brower-Toland, Bayer Crop Science</td><td>Announcement of poster winners</td></tr>
+      <tr><td>Jamie O’Rourke, USDA-ARS</td><td>Soybean Genomics Executive Committee Report</td></tr>
+      <tr><td>Elroy Cober, AAFC</td><td>Soybean Genetics Committee Report</td></tr>
+      <tr><td>Ben Fallen, USDA-ARS</td><td>Soybean Germplasm Committee Report</td></tr>
+      <tr><td>From the floor: Recognitions, retirements, and announcements</td></tr>
+      <tr><th colspan='2'>SESSION 7: Oral Presentations selected from poster abstracts</th></tr>
+      <tr><td>Scott Moore, Univ. of Guelph</td><td>Identification of novel marker-trait associations and genes for resistance to Soybean Cyst Nematode using a genetic diversity panel involving elite Canadian and Chinese germplasm</td></tr>
+      <tr><td>Atit Parajuli, Iowa State Univ.</td><td>A SNP panel to facilitate maker-assisted selection of genomic regions carrying genes for drought and flood tolerance and disease resistance in Soybean</td></tr>
+      <tr><td>Lucas Roberts, Univ. of Minnesota</td><td>Insights into breeding soybeans for winter oilseed relay-cropping systems</td></tr>
+      <tr><td>Mariola Usovsky, Univ. of Missouri</td><td>Resistance to Soybean Cyst Nematode is independent of Rhg1 in soybean landrace PI 407729</td></tr>
+      <tr><td>Lauren Docherty, Univ. of Minnesota</td><td>Virulence genetics of Soybean Cyst Nematode</td></tr>
+      <tr><td>Aamir Khan, Univ. of Missouri</td><td>A complete pangenomic landscape unlocks the genomic diversity of wild and cultivated soybean genomes</td></tr>
+      <tr><td colspan='2'>Adjourn</td></tr>
+    </body>
+  </table>
+</div>
+
+<h2>2025 Soybean Breeders' Workshop - Special Meetings</h2>
+<hr >
+<h3>Monday, February 17th, 2025</h3>  
+<div class="uk-overflow-auto">
+<table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+    <thead>
+        <tr>
+          <th class="uk-table-expand">Meeting</th>
+           <th class="uk-table-expand">Contact Person</th>
+        </tr>
+    </thead>
+    <body>
+      <tr><td>Data visualization workshop</td><td>Public Liaison Officer</td></tr>
+      <tr><td>Soybean Germplasm Committee Meeting</td><td>Ben Fallen, USDA-ARS</td></tr>
+      <tr><td>SoyBase Workshop Meeting</td><td><a href="https://www.soybase.org/about/#contact" target="_blank">SoyBase team</a></td></tr>
+      <tr><td>Soybean Genomics Executive Committee Meeting</td><td>Jamie O'Rourke, USDA-ARS</td></tr>
+      <tr><td>Technicians Workshop</td><td>Brian Little and Benjamin Bartlett</td></tr>
+      <tr><td>Soybean Genetics Committee</td><td>Elroy Cober, AAFC</td></tr>
+    </body>
+  </table>
+</div>
+
+<h3>Tuesday, February 18th, 2025</h3>  
+<div class="uk-overflow-auto">
+  <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+    <thead>
+        <tr>
+          <th class="uk-table-expand">Meeting</th>
+          <th class="uk-table-expand">Contact Person</th>
+        </tr>
+    </thead>
+    <body>
+      <tr><td>Technicians Workshop</td><td>Brian Little and Benjamin Bartlett</td></tr>
+      <tr><td>Northern Uniform Regional Testing & SCN Regional Testing</td><td>Adam Brock & Troy Cary</td></tr>
+      <tr><td>Southern Uniform Regional Testing</td><td>Anne Gillen, USDA-ARS</td></tr>
+      <tr><td></td></tr>
+    </body>
+  </table>
+</div>
+
+<h3>Wednesday, February 19th, 2025</h3>  
+<div class="uk-overflow-auto">
+<table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+    <thead>
+        <tr>
+          <th class="uk-table-expand">Meeting</th>
+          <th class="uk-table-expand">Contact Person</th>
+        </tr>
+    </thead>
+    <body>
+      <tr><td>Soybean Breeders' Workshop Planning Committee</td><td>President of the SBW Planning Committee</td></tr>
+    </body>
+  </table>
+</div>
