--- a/community/newsletter.html
+++ b/community/newsletter.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: SoyBase Newsletters
+title: SoyBase Newsletter
 sitemap: community
 ---
 
-<h1>Sign up to receive SoyBase Update Newsletters</h1>
+<h1>Sign up to receive SoyBase Update Newsletter</h1>
 <script async src="https://eocampaign1.com/form/2a5a1d18-ee9f-11ed-ba16-e54bd4d87ec6.js" data-form="2a5a1d18-ee9f-11ed-ba16-e54bd4d87ec6"></script>
 
 <hr > 
