--- a/community/soy_biennial/index.html
+++ b/community/soy_biennial/index.html
@@ -11,25 +11,8 @@ sitemap: community/soy_biennial
   soybean pests and diseases, seed composition and nutrition, biotic interactions, 
   functional genomics, genome structure and evolution, and more.
 </p>
-<div class="uk-panel">
-  <img class="uk-align-center uk-margin-remove-adjacent" 
-    src="https://data.soybase.org/annex/Glycine/max/meetings/soy_biennial/2025/Soy2025_LogoWithText.png" 
-    width="1000" height="291" alt="Soy2025:19th Biennial Conference on Molecular and Cellular Biology of Soybean"
-  > 
-  <p> 
-    <a class="uk-button uk-button-danger uk-border-rounded" href="https://uwmadison.eventsair.com/soy-2025/registration/Site/Register">Register</a> 
-  </p>
 
-  <ul class="uk-list">
-    <li>Affordable registration and lodging for students and researchers. Dormitory and hotel information 
-        can be found <a href="https://conferences.union.wisc.edu/soy2025/lodging/" target='_blank'>here</a>
-    </li>
-    <li>Call of abstracts submission for poster presentations (and speaking slots) will be open in late January 2025. 
-        Conference speakers will include researchers selected by organizers as well as 
-        speakers (at any career level) chosen from submitted poster abstracts, 
-        and 5-minute “lightning talk” by early-career speakers.
-    </li>
-  </ul>
+<h4>Next Biennial Soybean Conference will be in 2027 in Missouri</h4>
 
   <h1 class="uk-heading-divider"> </h1>
 
@@ -53,7 +36,8 @@ sitemap: community/soy_biennial
           <a href="https://data.soybase.org/annex/Glycine/max/meetings/soy_biennial/agendas/2018_SOY_biennial.pdf" target="_blank">2018</a>
           <a href="https://data.soybase.org/annex/Glycine/max/meetings/soy_biennial/agendas/2022_SOY_biennial.pdf" target="_blank">2022</a>
           <a href="https://data.soybase.org/annex/Glycine/max/meetings/soy_biennial/agendas/2023_SOY_biennial.pdf" target="_blank">2023</a>
-          <p>2025</p>	
+          <a href="https://data.soybase.org/annex/Glycine/max/meetings/soy_biennial/agendas/2025_SOY_biennial.pdf" target="_blank">2025</a>
+          <p>2027</p>	
         </div>
       </div>
 </div>
