--- a/community/soygec/awards.html
+++ b/community/soygec/awards.html
@@ -31,6 +31,11 @@ sitemap: false
             </div>
             <div class="uk-card-footer">
                 <ul class="uk-list">
+                    <li><b>2025</b>
+                        <ul class="uk-list uk-list-hyphen uk-list-emphasis">
+                             <li>Caio Canella Vieira, University of Arkansas</li> 
+                        </ul>    
+                    </li>
                     <li><b>2023</b>
                         <ul class="uk-list uk-list-hyphen uk-list-emphasis">
                             <li>Anna Locke, USDA-ARS Raleigh, NC</li>
@@ -55,6 +60,11 @@ sitemap: false
             </div>
             <div class="uk-card-footer">
                 <ul class="uk-list">
+                    <li><b>2025</b>
+                        <ul class="uk-list uk-list-hyphen uk-list-emphasis">
+                            <li>Michelle Graham, USDA-ARS, Ames, Iowa</li>
+                        </ul>
+                    </li>
                     <li><b>2023</b>
                         <ul class="uk-list uk-list-hyphen uk-list-emphasis">
                             <li>Robert Stupar, University of Minnesota</li>
@@ -89,6 +99,11 @@ sitemap: false
             </div>
             <div class="uk-card-footer">
                 <ul class="uk-list">
+                    <li><b>2025</b>
+                        <ul class="uk-list uk-list-hyphen uk-list-emphasis">
+                            <li>Gary Stacey, University of Missouri</li>
+                        </ul>
+                    </li>
                     <li><b>2023</b>
                         <ul class="uk-list uk-list-hyphen uk-list-emphasis">
                             <li>Anne Dorrance, The Ohio State University</li>
