add past newsletters

--- a/community/newsletter.html
+++ b/community/newsletter.html
@@ -6,8 +6,24 @@ sitemap: community
 
 <h1>Sign up to receive SoyBase Update Newsletter</h1>
 <script async src="https://eocampaign1.com/form/2a5a1d18-ee9f-11ed-ba16-e54bd4d87ec6.js" data-form="2a5a1d18-ee9f-11ed-ba16-e54bd4d87ec6"></script>
-
+<br />
 <hr > 
 
-<h1>Past SoyBase Update Newsletters</h1>
+		<div class="uk-card uk-card-default uk-margin-large">
+			<div class="uk-card-header uk-text-bold uk-card-primary uk-padding-small">
+				<h3>SoyBase Update Newsletter Archive</h3>
+			</div>
+				<div class="uk-padding">
+					<div uk-grid>
+
+						<a href="https://data.soybase.org/annex/Glycine/max/documents/newsletter/2025_07.pdf" target="_blank">July 2025</a>
+						<a href="https://data.soybase.org/annex/Glycine/max/documents/newsletter/2025_05.pdf" target="_blank">May 2025</a>
+						<a href="https://data.soybase.org/annex/Glycine/max/documents/newsletter/2025_04.pdf" target="_blank">April 2025</a>
+						<a href="https://data.soybase.org/annex/Glycine/max/documents/newsletter/2025_01.pdf" target="_blank">January 2025</a>
+						<a href="https://data.soybase.org/annex/Glycine/max/documents/newsletter/2024_11.pdf" target="_blank">November 2024</a>
+						<a href="https://data.soybase.org/annex/Glycine/max/documents/newsletter/2024_09.pdf" target="_blank">September 2024</a>
+						<a href="https://data.soybase.org/annex/Glycine/max/documents/newsletter/2024_08.pdf" target="_blank">August 2024</a>
+					
+					</div>
+		</div>
 
