--- a/community/newsletter.html
+++ b/community/newsletter.html
@@ -4,11 +4,6 @@ title: SoyBase Newsletter
 sitemap: community
 ---
 
-<h1>Sign up to receive SoyBase Update Newsletter</h1>
-<script async src="https://eocampaign1.com/form/2a5a1d18-ee9f-11ed-ba16-e54bd4d87ec6.js" data-form="2a5a1d18-ee9f-11ed-ba16-e54bd4d87ec6"></script>
-<br />
-<hr > 
-
 		<div class="uk-card uk-card-default uk-margin-large">
 			<div class="uk-card-header uk-text-bold uk-card-primary uk-padding-small">
 				<h3>SoyBase Update Newsletter Archive</h3>
@@ -25,5 +20,17 @@ sitemap: community
 						<a href="https://data.soybase.org/annex/Glycine/max/documents/newsletter/2024_08.pdf" target="_blank">August 2024</a>
 					
 					</div>
+				</div>
 		</div>
+
+
+<hr > 
+<br />
+<br />
+<h1>Sign up to receive SoyBase Update Newsletter</h1>
+<script async src="https://eocampaign1.com/form/2a5a1d18-ee9f-11ed-ba16-e54bd4d87ec6.js" data-form="2a5a1d18-ee9f-11ed-ba16-e54bd4d87ec6"></script>
+<br />
+
+
+
 
