--- a/tools/alleles/index.html
+++ b/tools/alleles/index.html
@@ -262,7 +262,11 @@ pre_selected_gene: Wm82.gnm4.div.Song_Hyten_2015
   let variantCollection = document.getElementById("collection-name")
   function onChange() {
     try {
-      let value = JSON.parse(variantCollection.value);
+      const raw = variantCollection && typeof variantCollection.value === 'string' ? variantCollection.value.trim() : '';
+      if (!raw) {
+        return; // ignore until a real selection exists
+      }
+      let value = JSON.parse(raw);
       document.getElementById("synopsis").textContent = value.synopsis || "No synopsis available.";
       // Reset strains when collection changes
       strainsCache = null;
@@ -288,9 +292,8 @@ pre_selected_gene: Wm82.gnm4.div.Song_Hyten_2015
         executeStrainQuery();
       }
     } catch (error) {
-      console.error("Error parsing JSON from variantCollection: ", error);
-      //document.getElementById("synopsis").textContent = "Invalid selection data.";
-      setAlert("Invalid selection data.");
+      // Silent no-op: selection value may temporarily be invalid; avoid user-facing alert
+      return;
     }
   }
 
@@ -341,10 +344,10 @@ pre_selected_gene: Wm82.gnm4.div.Song_Hyten_2015
       const collection = collectionVariantObj['collection-name'];
       const fileName = collectionVariantObj.name;
 
-      // Build FASTA API strains endpoint with full VCF URL
       const vcfUrl = `https://data.legumeinfo.org/Glycine/max/diversity/${collection}/${fileName}`;
-      //const url = `https://app.soybase.org/api/fasta-api/strains/${vcfUrl}`;
-      const url = `http://127.0.0.1:8000/strains/${vcfUrl}`; // Local server for development
+      // Strain endpoint expects the VCF URL to be double-encoded,
+      const doubleEncodedVcfUrl = encodeURIComponent(encodeURIComponent(vcfUrl));
+      const url = `http://dev.lis.ncgr.org:50043/vcf/samples/${doubleEncodedVcfUrl}`;
 
       const requestOptions = {
         method: 'GET',
@@ -358,8 +361,7 @@ pre_selected_gene: Wm82.gnm4.div.Song_Hyten_2015
       }
 
       const result = await response.json();
-      // Support payloads like { strains: ["PI..."] } or a plain array
-      const list = (result && Array.isArray(result.strains)) ? result.strains : (Array.isArray(result) ? result : []);
+      const list = (result && Array.isArray(result.samples)) ? result.samples : [];
       const normalized = list.map(s => ({ identifier: typeof s === 'string' ? s : (s.identifier || s.name || String(s)) }));
 
       if (normalized.length > 0) {
