--- a/tools/ontology/index.html
+++ b/tools/ontology/index.html
@@ -16,11 +16,10 @@ redirect_from: /amigo/
     <li class="uk-margin-remove-vertical"><b>development</b> (Soybean Development Ontology), and </li>
     <li class="uk-margin-remove-vertical"><b>plant traits</b> (Soybean Trait Ontology).</li>
   </ul>
-  Where applicable, soybean specific terms have been associated with their 
-  <a href="https://planteome.org" name="PO" title="Plant Ontology Consortium" target="_self">
+  Where applicable, soybean specific terms have been associated with their Plant Ontology (PO) synonyms to facilitate cross species comparisons. 
+<!-- <a href="https://planteome.org" name="PO" title="Plant Ontology Consortium" target="_self">
     Plant Ontology (PO)
-  </a> 
-  synonyms to facilitate cross species comparisons. 
+  </a>  -->
   Since the original release of the SoyBase Ontologies, they have been re-factored at the request of the Plant Ontology
   Consortium. This change resulted in the elimination of a separate accession system for SoyTO and SoyGRO.
   These terms were re-accessioned into the SoyWGR namespace and the SoyWGR prefix was changed to SOY. 
@@ -41,11 +40,12 @@ redirect_from: /amigo/
     "Soybean Growth and Development" Iowa State University Extension publication 
     <a href="https://store.extension.iastate.edu/product/6451" name="PM1945" title="ISU Extension Publication PM 1945" target="_self">PM 1945</a> 
     by Palle Pedersen. It describes soybean growth and development from the stand point of determining the growth of a field of soybeans. 
-    Some terms relate to a single plant, but others are applicable to a field as a whole. Where possible, these terms are linked to their 
+    Some terms relate to a single plant, but others are applicable to a field as a whole. 
+    <!-- Where possible, these terms are linked to their 
     <a href="https://browser.planteome.org/amigo/search/ontology?q=PO:0009089" name="PlantOntology" title="Plant Ontology Consortium Browsers" target="_self">
-      Plant Ontology Whole Plant Growth or Structure
-    </a> 
-    synonyms to facilitate cross-species comparisons. This ontology has also been linked where possible to synonymous stages in 
+      Plant Ontology Whole Plant Growth or Structure </a> synonyms to facilitate cross-species comparisons. -->
+    
+    This ontology has also been linked where possible to synonymous stages in 
     the BBCH scale to allow researchers to more easily translate research data compiled using the BBCH scale to data compiled 
     using the familiar V and R stages.<br><br> For convienience, see a 
     <a href="./ontologyConversion.html" name="conversiontable" title="Whole Plant Growth and Development Conversion Table" target="_self">
