--- a/tools/ontology/index.html
+++ b/tools/ontology/index.html
@@ -47,10 +47,10 @@ redirect_from: /amigo/
     
     This ontology has also been linked where possible to synonymous stages in 
     the BBCH scale to allow researchers to more easily translate research data compiled using the BBCH scale to data compiled 
-    using the familiar V and R stages.<br><br> For convienience, see a 
+    using the familiar V and R stages.<br><br> <!-- For convienience, see a 
     <a href="./ontologyConversion.html" name="conversiontable" title="Whole Plant Growth and Development Conversion Table" target="_self">
       <strong>conversion table</strong>
-    </a> linking the V and R stages to their respective Plant Ontology Whole Plant Growth terms and the BBCH scale.</p>
+    </a> linking the V and R stages to their respective Plant Ontology Whole Plant Growth terms and the BBCH scale.</p> -->
   </div>
 
 <!-- ################# -->
