--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -8,7 +8,7 @@ sitemap: community/sbw
 <div class="uk-panel">
   <img class="uk-align-right uk-margin-remove-adjacent" src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/SBW_logo.png" width="300" height="175" alt="Soybean Breeder Workshop Logo">
   <h5 class="uk-heading-small uk-margin-remove-vertical">2026 Soybean Breeders Workshop</h5>
-  <h6 class="uk-heading-small uk-margin-remove-top">Physiology and Breeding Innovations</h6>
+  <h6 class="uk-heading-small uk-margin-remove-top">Abiotic Stress</h6>
 
   <p class="uk-margin-remove-vertical">February 16 - 18, 2026</p>
   <p class="uk-margin-remove-vertical">Hilton St. Louis Frontenac</p>
@@ -22,26 +22,38 @@ sitemap: community/sbw
 
 <h4 class="uk-background-primary uk-padding-small uk-light uk-border-rounded">New for 2026</h4>
 <ul class="uk-list">
-    <li>To Be Announced</li>
-
+    <li>More details about the poster competition and 15-minute oral presentation found below.</li>
+  
 </ul>    
     
-<h4 class="uk-text-bold">Poster Presentation and Judging Information</h4>
-    <p>The poster session and graduate student poster competition will be held in conjunction with the evening social hour. Anyone is welcome to display a poster. 
-    Cash prizes will be awarded to the winners Wednesday morning of the Workshop. <b>Please be sure to submit poster abstracts by January 10 to be considered for a 15-minute oral presentation to occur Wednesday morning.</b>  
-    Please <!-- Add link here --> register to submit a poster abstract.
-    </p>
-<div class="uk-margin">
-    <button class="uk-button uk-button-primary uk-button-small uk-border-rounded" type="button" uk-toggle="target: #details-1; animation: uk-animation-fade; cls: uk-hidden" onclick="rotateTriangle(this)" value="details-1-triangle"><div class="uk-flex">Poster Details<span id="details-1-triangle" uk-icon="icon:triangle-right" class="toggle-top-margin"></span></div></button>
-    <div id="details-1" class="uk-margin-small uk-hidden">
-        <ul>
+<h4 class="uk-text-bold">Graduate Student Poster Competition and Student / PostDoc oral presentations</h4>
+    <p>Abstracts must be submited by January 12, 2026 to be considered for the graduate student poster competition and/or the oral presentation.
+      <ul>
+        <li>Poster Competition:
+          <ul class="uk-list uk-list-circle">
+            <li>The graduate student poster competition will be held in conjunction with the evening social hour. </li>
+            <li>Judges will review the posters on the following aspects:   </li>
+            <li>Cash awards will be awarded for the 1st ($300), 2nd ($200), 3rd ($100) place winners on Wednesday morning.</li> 
+          </ul>
+        </li>
+        <li>15-minute Oral Presentation:
+          <ul class="uk-list uk-list-circle">
+            <li>Graduate Students and PostDocs are eligable.</li>
+            <li>Candidates will be notified by January 16, 2026 if they were selected for an oral presentation.</li>
+          </ul>
+        </li>
+      </ul>
+</p>
+
+
+<h4 class="uk-text-bold">General Poster Information</h4>
+    <p>
+      <ul>
         <li>Anyone is welcome to display a poster. Posters previously presented at other meetings are welcome.</li>
         <li>Poster display space is nominally 36 inches in height X 48 inches wide</li>
         <li>Poster abstracts will be accepted until DATE</li>
-        <li>Posters may be hung up as early as Monday morning, and must remain up until Tuesday evening in order to be considered for competition awards.</li>
-        <li>Posters must be removed by noon on Wednesday.</li>
-        <li>Student Posters will be judged and awards given for the 1st ($300), 2nd ($200), 3rd ($100) place winners.</li>
-        <li>Awards will be presented on Wednesday morning during the opening Welcome and Announcements. If you are not present, you will be notified by email and the award will be sent to you by mail.</li>
+        <li>Posters may be hung up as early as Monday morning and must be removed by noon on Wednesday.</li>
+
         <li>For questions about the poster session please contact <a href="mailto:nchoquette@bensonhill.com">Nicole Choquette</a></li>
         </ul>
     </div>
@@ -50,7 +62,7 @@ sitemap: community/sbw
 <div class="uk-flex uk-flex-center">
     
         <div class="uk-card uk-card-default uk-card-body uk-border-rounded uk-background-primary uk-light uk-padding-small">
-            <h5 class="uk-text-bold uk-text-center">Registration Fees until DATE</h5>
+            <h5 class="uk-text-bold uk-text-center">Registration Fees until January 31, 2026</h5>
             <table class="uk-table">
                 <tbody>
                     <tr>
@@ -62,8 +74,9 @@ sitemap: community/sbw
                         <td class="uk-text-right">$200</td>
                     </tr>
                     <tr>
-                        <td>Data Visualation Workshop</td>
-                        <td class="uk-text-right">$75</td>
+                        <td>Workshop</td>
+                        <td class="uk-text-right"><b>Student / PostDoc</b>$50</td>
+                        <td class="uk-text-right"><b>Professional</b>$50</td>
                     </tr>
                 </tbody>
             </table>
