--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -26,7 +26,7 @@ sitemap: community/sbw
     <div>
         <div class="uk-card uk-card-default uk-border-rounded uk-width-medium">
             <div class="uk-card-body">
-                <h5 class="uk-text-bold uk-text-center">Registration Fees until 01/31/2026</h5>
+                <h5 class="uk-text-center">Registration Fees until 01/31/2026</h5>
                 <p>
                     <table class="uk-table">
                         <tbody>
@@ -47,7 +47,7 @@ sitemap: community/sbw
     <div>
         <div class="uk-card uk-card-default uk-border-rounded uk-width-medium">
             <div class="uk-card-body">
-                <h5 class="uk-text-bold uk-text-center">Workshop Fees until full</h5>
+                <h5 class="uk-text-center">Workshop Fees until full</h5>
                 <p>
                     <table class="uk-table">
                     <tbody>
@@ -68,7 +68,7 @@ sitemap: community/sbw
     <div>
         <div class="uk-card uk-card-default uk-border-rounded uk-width-medium">
             <div class="uk-card-body">
-                <h5 class="uk-text-bold uk-text-center">Late Registration Fees after 01/31/2026</h5>
+                <h5 class="uk-text-center">Late Registration Fees after 01/31/2026</h5>
                 <p>
                     <table class="uk-table">
                         <tbody>
@@ -100,21 +100,18 @@ sitemap: community/sbw
                 <h3 class="uk-card-title"><b>SBW2026 Workshop: Phenotypic Plasticity</b></h3>
                 <p>In this workshop, we will:
                 <ul>   
-                    <li>phenotypic plasticity and explain two different origins of genotype-by-environment interaction.</li>
+                    <li>Phenotypic plasticity and explain two different origins of genotype-by-environment interaction.</li>
                     <li>Practice an open-source CERIS-JGRA package to dissect and predict quantitative traits.</li>
                     <li>Identifying genomic and environmental determinants underlying phenotypic plasticity.</li>
                 </ul>  
                     </p>
             </div>
             <div class="uk-card-footer">
-               <a href="/community/sbw/workshop.html" class="uk-button uk-button-text">Read more</a>
+               <a href="/community/sbw/workshop.html" class="uk-button uk-text-bold uk-button-text">Read more</a>
             </div>
         </div>
     </div>
 </div>
-
-
-
 
 <br>
 <div>
@@ -151,8 +148,8 @@ sitemap: community/sbw
 </div>
 
 
-<h4 class="uk-background-primary uk-padding-small uk-light uk-border-rounded">Speakers: To be Announced</h4>
-<!--
+<h4 class="uk-background-primary uk-padding-small uk-light uk-border-rounded">Keynote Speakers</h4>
+
 <div class="uk-text-center uk-grid-match uk-flex uk-flex-center" uk-grid>
     <div>
         <div class="uk-card uk-card-default uk-border-rounded uk-width-medium">
@@ -161,9 +158,9 @@ sitemap: community/sbw
             </div>
             <div class="uk-card-body">
                 <h3 class="uk-card-title">Keynote Speaker</h3>
-                <p>Dr. Jan Leach</p>
-                <p>Plant Pathologist</p>
-                <p>Colorado State University</p>
+                <p>Dr. Charlie Messina</p>
+                <p>info needed</p>
+                <p>University of Florida</p>
             </div>
         </div>
     </div>
@@ -174,9 +171,9 @@ sitemap: community/sbw
             </div>
             <div class="uk-card-body">
                 <h3 class="uk-card-title">Keynote Speaker</h3>
-                <p>Dr. Carl Bradley</p>
-                <p>Plant Pathologist</p>
-                <p>University of Kentucky</p>
+                <p>Dr. Lisa Ainsworth</p>
+                <p>info needed</p>
+                <p>University of Illinois</p>
             </div>
         </div>
     </div>
@@ -187,14 +184,13 @@ sitemap: community/sbw
             </div>
             <div class="uk-card-body">
                 <h3 class="uk-card-title">Workshop Instructor</h3>
-                <p>Dr. Cory Hirsch</p>
-                <p>Plant Pathologist</p>
-                <p>Univeristy of Minnesota</p>
+                <p>Dr. Jianming Yu</p>
+                <p>info needed</p>
+                <p>Iowa State University</p>
             </div>
         </div>
     </div>
 </div>
--->
 <h4 class="uk-background-primary uk-padding-small uk-light uk-border-rounded">Hotel Information</h4>
 <p>
 A room block is available at Hilton St. Louis Frontenac for DATE
