update SBW webpages

--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -16,76 +16,49 @@ sitemap: community/sbw
 </div>
 
 <p>
-<a class="uk-button uk-button-danger uk-border-rounded" href="https://www.eventbrite.com/e/2025-soybean-breeders-workshop-tickets-910521944647">Register</a>
+<a class="uk-button uk-button-danger uk-border-rounded" href="https://www.eventbrite.com/e/2026-soybean-breeders-workshop-tickets-1972901659974">Register</a>
 </p>
 <h1 class="uk-heading-divider uk-margin-remove-vertical"></h1>
 
 <h4 class="uk-background-primary uk-padding-small uk-light uk-text-bold uk-border-rounded">Registration Fees</h4>
 <br>
-<div class="uk-text-center uk-grid-match uk-flex uk-flex-center" uk-grid>
-    <div>
-        <div class="uk-card uk-card-default uk-border-rounded uk-width-medium">
-            <div class="uk-card-body">
-                <h5 class="uk-text-center">Registration Fees until 01/31/2026</h5>
-                <p>
-                    <table class="uk-table">
-                        <tbody>
-                        <tr>
-                            <td>Student / PostDoc</td>
-                            <td class="uk-text-right">$125</td>
-                        </tr>
-                        <tr>
-                            <td>Professional</td>
-                            <td class="uk-text-right">$200</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </p>
-            </div>
+<div class="uk-flex uk-flex-center">
+    
+        <div class="uk-card uk-card-default uk-card-body uk-border-rounded uk-background-primary uk-light uk-padding-small">
+            <h5 class="uk-text-bold uk-text-center">Registration Fees until 01/31/2026</h5>
+            <table class="uk-table">
+                <tbody>
+                    <tr>
+                        <td>Student / PostDoc</td>
+                        <td class="uk-text-right">$125</td>
+                    </tr>
+                    <tr>
+                        <td>Professional</td>
+                        <td class="uk-text-right">$200</td>
+                    </tr>
+                    <tr>
+                        <td>Phenotypic Plasticity & GxE Workshop</td>
+                        <td class="uk-text-right">$50</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-    </div>
-    <div>
-        <div class="uk-card uk-card-default uk-border-rounded uk-width-medium">
-            <div class="uk-card-body">
-                <h5 class="uk-text-center">Workshop Fees until full</h5>
-                <p>
-                    <table class="uk-table">
-                    <tbody>
-                        <tr>
-                            <td>Student / PostDoc</td>
-                            <td class="uk-text-right">$50</td>
-                        </tr>
-                        <tr>
-                            <td>Professional</td>
-                            <td class="uk-text-right">$75</td>
-                        </tr>
-                    </tbody>
-                    </table>
-                </p>
-            </div>
+    
+        <div class="uk-card uk-card-default uk-card-body uk-border-rounded uk-background-secondary uk-light uk-padding-small uk-margin-small-left">
+            <h5 class="uk-text-bold uk-text-center">Late Registration Fees after 01/31/2026</h5>
+            <table class="uk-table">
+                <tbody>
+                    <tr>
+                        <td>Student / PostDoc</td>
+                        <td class="uk-text-right">$175</td>
+                    </tr>
+                    <tr>
+                        <td>Professional</td>
+                        <td class="uk-text-right">$250</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-    </div>
-    <div>
-        <div class="uk-card uk-card-default uk-border-rounded uk-width-medium">
-            <div class="uk-card-body">
-                <h5 class="uk-text-center">Late Registration Fees after 01/31/2026</h5>
-                <p>
-                    <table class="uk-table">
-                        <tbody>
-                            <tr>
-                                <td>Student / PostDoc</td>
-                                <td class="uk-text-right">$175</td>
-                            </tr>
-                            <tr>
-                                <td>Professional</td>
-                                <td class="uk-text-right">$250</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </p>
-            </div>
-        </div>
-    </div>
 </div>
 
 <h1 class="uk-heading-divider"></h1>
@@ -93,11 +66,11 @@ sitemap: community/sbw
 <div>
     <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@m uk-margin uk-border-rounded uk-flex-middle" uk-grid>
         <div class="uk-card-media-left uk-cover-container">
-            <img src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/2025/SBW2025_Workshop_image.png" alt="Figure that shows significant marker trait associations">
+            <img src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/2026/SBW2026_Workshop_image.png" alt="Figure that shows Phenotypic Plasticity">
         </div>
         <div>
             <div class="uk-card-body">
-                <h3 class="uk-card-title"><b>SBW2026 Workshop: Phenotypic Plasticity</b></h3>
+                <h3 class="uk-card-title"><b>SBW2026 Workshop: Phenotypic Plasticity & GxE</b></h3>
                 <p>In this workshop, we will:
                 <ul>   
                     <li>Phenotypic plasticity and explain two different origins of genotype-by-environment interaction.</li>
@@ -140,7 +113,7 @@ sitemap: community/sbw
             <ul>
                 <li>Anyone is welcome to display a poster. Posters previously presented at other meetings are welcome.</li>
                 <li>Poster display space is nominally 36 inches in height X 48 inches wide</li>
-                <li>Poster abstracts will be accepted until DATE</li>
+                <li>Poster abstracts will be accepted until 02/09/2026</li>
                 <li>Posters may be hung up as early as Monday morning and must be removed by noon on Wednesday.</li>
                 <li>For questions about the poster session or the graduate student pposter competition please contact <a href="brent.brower-toland@bayer.com">Brent Brower-Toland</a></li>
             </ul>
@@ -148,18 +121,17 @@ sitemap: community/sbw
 </div>
 
 
-<h4 class="uk-background-primary uk-padding-small uk-light uk-border-rounded">Keynote Speakers</h4>
+<h4 class="uk-background-primary uk-padding-small uk-text-bold uk-light uk-border-rounded">Keynote Speakers</h4>
 
 <div class="uk-text-center uk-grid-match uk-flex uk-flex-center" uk-grid>
     <div>
         <div class="uk-card uk-card-default uk-border-rounded uk-width-medium">
             <div class="uk-card-media-top">
-                <img class="uk-margin-medium-top" src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/2025/SBW2025_Jan_Leach.png" width="200" height="200" alt="Dr. Jan Leach">
+                <img class="uk-margin-medium-top" src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/2026/SBW2026_Charlie_Messina.png" width="200" height="200" alt="Dr. Charlie Messina">
             </div>
             <div class="uk-card-body">
                 <h3 class="uk-card-title">Keynote Speaker</h3>
                 <p>Dr. Charlie Messina</p>
-                <p>info needed</p>
                 <p>University of Florida</p>
             </div>
         </div>
@@ -167,12 +139,11 @@ sitemap: community/sbw
     <div>
         <div class="uk-card uk-card-default uk-border-rounded uk-width-medium">
             <div class="uk-card-media-top">
-                <img class="uk-margin-medium-top" src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/2025/SBW2025_Carl_Bradley.png" width="200" height="200" alt="Dr. Carl Bradley">
+                <img class="uk-margin-medium-top" src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/2026/SBW2026_Elizabeth_Ainsworth.png" width="200" height="200" alt="Dr. Elizabeth Ainsworth">
             </div>
             <div class="uk-card-body">
                 <h3 class="uk-card-title">Keynote Speaker</h3>
                 <p>Dr. Lisa Ainsworth</p>
-                <p>info needed</p>
                 <p>University of Illinois</p>
             </div>
         </div>
@@ -180,12 +151,11 @@ sitemap: community/sbw
     <div>
         <div class="uk-card uk-card-default uk-border-rounded uk-width-medium">
             <div class="uk-card-media-top">
-                <img class="uk-margin-medium-top" src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/2025/SBW2025_Cory_Hirsch.jpg" width="200" height="200" alt="Dr. Cory Hirsch">
+                <img class="uk-margin-medium-top" src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/2026/SBW2026_Jianming_Yu.png" width="200" height="200" alt="Dr. Jianming Yu">
             </div>
             <div class="uk-card-body">
                 <h3 class="uk-card-title">Workshop Instructor</h3>
                 <p>Dr. Jianming Yu</p>
-                <p>info needed</p>
                 <p>Iowa State University</p>
             </div>
         </div>
@@ -193,13 +163,12 @@ sitemap: community/sbw
 </div>
 <h4 class="uk-background-primary uk-padding-small uk-light uk-border-rounded">Hotel Information</h4>
 <p>
-A room block is available at Hilton St. Louis Frontenac for DATE
-Please make reservations by <b>DATE</b>, to ensure group discount. 
-<!--
-Here is the <a href="https://www.hilton.com/en/attend-my-event/stlfhhf-sbw25-9dce262b-71d5-4042-8649-cae0a78103fc/" target="_blank">direct booking link</a> for the Soybean Breeders Workshop 2026. 
--->
+A room block is available at Hilton St. Louis Frontenac for February 15 - 18, 2026. 
+Please make reservations by <b>01/26/2026</b>, to ensure group discount. 
+
+Here is the <a href="https://www.hilton.com/en/attend-my-event/stlfhhf-94j-3f858198-d595-4f67-9006-33f026226671/" target="_blank">direct booking link</a> for the Soybean Breeders Workshop 2026. 
 <br> <br>
-The SBW Organizing Committee encourages attendees to use the Hilton St. Louis Frontenac for their hotel stay. 
+The SBW Organizing Committee encourages attendees to use the Hilton St. Louis Frontenac for their hotel stay. There are both 2 Queen bed room and 1 King Deluxe rooms available for the SBW. 
 Your room reservations will help offset the costs of the meeting rooms throughout the conference and to keep the registration cost down.
 </p>
 
