--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -115,7 +115,7 @@ sitemap: community/sbw
                 <li>Poster display space is nominally 36 inches in height X 48 inches wide</li>
                 <li>Poster abstracts will be accepted until 02/09/2026</li>
                 <li>Posters may be hung up as early as Monday morning and must be removed by noon on Wednesday.</li>
-                <li>For questions about the poster session or the graduate student pposter competition please contact <a href="brent.brower-toland@bayer.com">Brent Brower-Toland</a></li>
+                <li>For questions about the poster session or the graduate student pposter competition please contact <a href="mailto:brent.brower-toland@bayer.com">Brent Brower-Toland</a></li>
             </ul>
         </p>
 </div>
