--- a/community/sbw/workshop.html
+++ b/community/sbw/workshop.html
@@ -57,6 +57,10 @@ sitemap: community/sbw
 </ul>
 </p>
 
+<h1 class="uk-heading-divider uk-margin-remove-vertical"></h1>
+<p>
+    <a class="uk-button uk-button-primary uk-border-rounded" href="/community/sbw/registration.html">Return to Information page</a>
+</p>
 
-<h1 class="uk-heading-divider"></h1>
+
 
