--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -80,7 +80,7 @@ sitemap: community/sbw
                     </p>
             </div>
             <div class="uk-card-footer">
-               <a href="/community/sbw/workshop.html" class="uk-button uk-text-bold uk-button-text">Read more</a>
+               <a href="/community/sbw/workshop.html" target="_blank" class="uk-button uk-text-bold uk-button-text">Read more</a>
             </div>
         </div>
     </div>
