updated officers page

--- a/community/sbw/officers.html
+++ b/community/sbw/officers.html
@@ -12,7 +12,7 @@ sitemap: community/sbw
 <h1 class="uk-heading-divider uk-margin-remove-top"></h1>
 
     
-<div class="uk-child-width-1-4@m uk-grid-medium uk-grid-match uk-background-contain uk-text-center" data-src="/assets/img/sbw/SBW_logo.png?fit=crop&w=650&h=433&q=80" uk-img uk-grid>
+<div class="uk-child-width-1-4@m uk-grid-medium uk-grid-match uk-background-contain uk-text-center" uk-grid>
     <div>
         <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
                 <div class="uk-card-media-top">
