--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -80,7 +80,7 @@ sitemap: community/sbw
                     </p>
             </div>
             <div class="uk-card-footer">
-               <a href="/community/sbw/workshop.html" class="uk-button uk-text-bold uk-button-text">Read more</a>
+               <a href="/community/sbw/workshop.html" target="_blank" class="uk-button uk-text-bold uk-button-text">Read more</a>
             </div>
         </div>
     </div>
@@ -175,7 +175,7 @@ Your room reservations will help offset the costs of the meeting rooms throughou
     <button class="uk-button uk-button-primary uk-button-small uk-border-rounded" type="button" uk-toggle="target: #details-2; animation: uk-animation-fade; cls: uk-hidden" onclick="rotateTriangle(this)" value="details-2-triangle"><div class="uk-flex">details<span id="details-2-triangle" uk-icon="icon:triangle-right" class="toggle-top-margin"></span></div></button>
     <div id="details-2" class="uk-margin-small uk-hidden">
         <p>If you plan to organize a small group meeting and need a meeting room during the workshop, please send your 
-            request to <a href="mailto:nchoquette@bensonhill.com">Nicole Choquette</a> <b>no later than DATE</b> 
+            request to <a href="mailto:nchoquette@bensonhill.com">Nicole Choquette</a> <b>no later than February 2, 2026</b> 
             by indicating number of attendees, meeting date and time.
         </p>
     </div>
