update SBW and ILS event

--- a/community/sbw/officers.html
+++ b/community/sbw/officers.html
@@ -14,6 +14,7 @@ sitemap: community/sbw
     
 <div class="uk-child-width-1-4@m uk-grid-medium uk-grid-match uk-background-contain uk-text-center" uk-grid>
     <div>
+
         <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
                 <div class="uk-card-media-top">
                     <img src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/officers/SBW_Officer_Ben_Hall.png"  class="uk-margin-medium-top" width="200" height="200" alt="Ben Hall">
@@ -90,6 +91,19 @@ sitemap: community/sbw
             </div>
         </div>
 
+
+        <div>
+            <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
+                    <div class="uk-card-media-top">
+                        <img src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/officers/SBW_Officer_Michaela_McGinn.jpg"  class="uk-margin-medium-top" width="200" height="200" alt="Michaela McGinn">
+                    </div>
+                <div class="uk-card-body">
+                    <h3 class="uk-card-title">Michaela McGinn</h3>
+                    <p class="uk-text-emphasis">USB Liaison | United Soybean Board</p>
+                </div>
+            </div>
+        </div>
+
         <div>
             <div class="uk-card uk-card-default uk-border-rounded glass-morphism">
                     <div class="uk-card-media-top">
@@ -114,4 +128,5 @@ sitemap: community/sbw
                 </div>
             </div>
         </div>
+    </div>
 </div>
