remove SoyCyc and SBW hotel button

--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -12,11 +12,14 @@ sitemap: community/sbw
 
   <p class="uk-margin-remove-vertical">February 16 - 18, 2026</p>
   <p class="uk-margin-remove-vertical">Hilton St. Louis Frontenac</p>
-  <a href="https://www.google.com/maps/place/Hilton+St.+Louis+Frontenac/@38.6341961,-90.4097409,17z/data=!4m9!3m8!1s0x87d8ccdc51b5c88d:0x7035e9e66f84beb7!5m2!4m1!1i2!8m2!3d38.6341961!4d-90.407166!16s%2Fg%2F1vnnjylv?entry=ttu" target="_blank">1335 S Lindbergh Blvd, St. Louis, MO 63131</a>
+  1335 S Lindbergh Blvd, St. Louis, MO 63131
 </div>
 
 <p>
-<a class="uk-button uk-button-danger uk-border-rounded" href="https://www.eventbrite.com/e/2026-soybean-breeders-workshop-tickets-1972901659974">Register</a>
+<a class="uk-button uk-button-danger uk-border-rounded" href="https://www.eventbrite.com/e/2026-soybean-breeders-workshop-tickets-1972901659974" target="_blank">Register for Workshop</a>
+</p>
+<p>
+<a class="uk-button uk-button-primary uk-border-rounded" <a href="https://www.hilton.com/en/attend-my-event/stlfhhf-94j-3f858198-d595-4f67-9006-33f026226671/" target="_blank">Hotel Room Link</a>
 </p>
 <h1 class="uk-heading-divider uk-margin-remove-vertical"></h1>
 
