SBW2026 update info

--- a/community/sbw/index.html
+++ b/community/sbw/index.html
@@ -6,7 +6,7 @@ sitemap: community/sbw
 			<h2>Soybean Breeders' Workshop</h2>
 
 			<p class="uk-margin-large-bottom">The Soybean Breeders Workshop is held annually in February in St. Louis, MO. Starting in 2010 copies
-			of the presentations have been made available to the commnity. The links below allow downloading or viewing these PDFs.</p>
+			of the presentations have been made available to the community. The links below allow downloading or viewing these PDFs.</p>
 
 			<div class="uk-card uk-card-default uk-margin">
 				<div class="uk-card-header uk-text-bold uk-card-primary uk-padding-small">
@@ -18,7 +18,9 @@ sitemap: community/sbw
 						<b>Theme:</b>Physiology and Breeding Innovations<br/>
 						<b>Where:</b>Hilton St. Louis Frontenac in St. Louis, Missouri
 					</p>		
+						<h4 class="uk-margin-remove-bottom"><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2026/SBW_2026_DRAFT_2026.01.08.pdf">SBW 2026 DRAFT Agenda</a></h4>
 						<h4 class="uk-margin-remove-bottom"><a href="./registration.html">2026 Soybean Breeder's Workshop Information and registration page</a></h4>
+						<p class="uk-text-lead uk-text-danger uk-text-center">The date to submit an abstract for the graduate student poster competition and oral presentation <br> has been extended to <u>January 21st</u>. </p>
 				</div>
 			</div>
 
