--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -9,12 +9,15 @@ sitemap: community/sbw
   <img class="uk-align-right uk-margin-remove-adjacent" src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/SBW_logo.png" width="300" height="175" alt="Soybean Breeder Workshop Logo">
   <h5 class="uk-heading-small uk-margin-remove-vertical">2026 Soybean Breeders Workshop</h5>
   <h6 class="uk-heading-small uk-margin-remove-top">Abiotic Stress</h6>
+  <br> 
+
 
   <p class="uk-margin-remove-vertical">February 16 - 18, 2026</p>
   <p class="uk-margin-remove-vertical">Hilton St. Louis Frontenac</p>
-  1335 S Lindbergh Blvd, St. Louis, MO 63131
+  <p class="uk-margin-remove-vertical">1335 S Lindbergh Blvd, St. Louis, MO 63131</p>
 </div>
 
+<p><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2026/SBW_2026_DRAFT_2026.01.08.pdf" target="_blank">SBW 2026 DRAFT Agenda</a></p>
 <p>
 <a class="uk-button uk-button-danger uk-border-rounded" href="https://www.eventbrite.com/e/2026-soybean-breeders-workshop-tickets-1972901659974" target="_blank">Register for Workshop</a>
 </p>
