--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -9,18 +9,23 @@ sitemap: community/sbw
   <img class="uk-align-right uk-margin-remove-adjacent" src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/SBW_logo.png" width="300" height="175" alt="Soybean Breeder Workshop Logo">
   <h5 class="uk-heading-small uk-margin-remove-vertical">2026 Soybean Breeders Workshop</h5>
   <h6 class="uk-heading-small uk-margin-remove-top">Abiotic Stress</h6>
+  <br> 
+
 
   <p class="uk-margin-remove-vertical">February 16 - 18, 2026</p>
   <p class="uk-margin-remove-vertical">Hilton St. Louis Frontenac</p>
-  1335 S Lindbergh Blvd, St. Louis, MO 63131
+  <p class="uk-margin-remove-vertical">1335 S Lindbergh Blvd, St. Louis, MO 63131</p>
 </div>
 
+<p><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2026/SBW_2026_DRAFT_2026.01.08.pdf" target="_blank">SBW 2026 DRAFT Agenda</a></p>
 <p>
 <a class="uk-button uk-button-danger uk-border-rounded" href="https://www.eventbrite.com/e/2026-soybean-breeders-workshop-tickets-1972901659974" target="_blank">Register for Workshop</a>
 </p>
 <p>
 <a class="uk-button uk-button-primary uk-border-rounded" <a href="https://www.hilton.com/en/attend-my-event/stlfhhf-94j-3f858198-d595-4f67-9006-33f026226671/" target="_blank">Hotel Room Link</a>
 </p>
+<p class="uk-text-lead uk-text-danger">Please make reservations by <b>01/26/2026</b>, to ensure group discount. Your room reservations will help offset the costs of the meeting rooms throughout the conference and to keep the registration cost down.</p>
+
 <h1 class="uk-heading-divider uk-margin-remove-vertical"></h1>
 
 <h4 class="uk-background-primary uk-padding-small uk-light uk-text-bold uk-border-rounded">Registration Fees</h4>
@@ -92,7 +97,7 @@ sitemap: community/sbw
 <br>
 <div>
     <h4 class="uk-background-primary uk-padding-small uk-light uk-text-bold uk-border-rounded">Graduate Student Poster Competition and Student / PostDoc oral presentations</h4>
-        <p>Abstracts must be submited by January 12, 2026 to be considered for the graduate student poster competition and/or the oral presentation.
+        <p>Abstracts must be submited by January 21, 2026 to be considered for the graduate student poster competition and/or the oral presentation.
             <ul>
                 <li><b>Poster Competition:</b>
                     <ul class="uk-list uk-list-circle">
@@ -104,7 +109,7 @@ sitemap: community/sbw
                 <li><b>15-minute Oral Presentation:</b>
                     <ul class="uk-list uk-list-circle">
                         <li>Graduate Students and PostDocs are eligable.</li>
-                        <li>Candidates will be notified by January 16, 2026 if they were selected for an oral presentation.</li>
+                        <li>Candidates will be notified by January 28, 2026 if they were selected for an oral presentation.</li>
                     </ul>
                 </li>
             </ul>
