--- a/community/sbw/index.html
+++ b/community/sbw/index.html
@@ -15,7 +15,7 @@ sitemap: community/sbw
 				<div class="uk-padding">
 					<p>
 						<b>When:</b>February 16-18, 2026<br />
-						<b>Theme:</b>Physiology and Breeding Innovations<br/>
+						<b>Theme:</b>Abiotic Stress<br/>
 						<b>Where:</b>Hilton St. Louis Frontenac in St. Louis, Missouri
 					</p>		
 						<h4 class="uk-margin-remove-bottom"><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2026/SBW_2026_DRAFT_2026.01.08.pdf" target="_blank">SBW 2026 DRAFT Agenda</a></h4>
